--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,6 @@ DB_USER=root
 DB_PASS=
 DB_HOST=127.0.0.1
 DB_DIALECT=mysql
-DB_PORT=3307  <-- TAMBAHKAN INI (Sesuai XAMPP Anda)
+DB_PORT=3307
 
 JWT_SECRET=rahasia_bebas_acak_12345
