--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "api": "^6.1.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "cookies": "^0.9.1",
